--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,8 +1,9 @@
 :root {
   --app-width: 1280px;
 
-  --col-text: #213547;
-  --col-bg: #ffffff;
+  --col-text: light-dark(#213547, #f9f9f9);
+  --col-bg: light-dark(#ffffff, #090f14);
+  --col-border: light-dark(#213547, #e9e9e9);
 
   --space-xs: 0.3rem;
   --space-sm: 0.6rem;
